--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -109,3 +109,46 @@
 .transition {
   transition: .2s ease;
 }
+
+.overlay-90::before {
+  opacity: .9;
+}
+.overlay-80::before {
+  opacity: .8;
+}
+.overlay-70::before {
+  opacity: .7;
+}
+.overlay-60::before {
+  opacity: .6;
+}
+.overlay-50::before {
+  opacity: .5;
+}
+.overlay-40::before {
+  opacity: .4;
+}
+.overlay-30::before {
+  opacity: .3;
+}
+.overlay-20::before {
+  opacity: .2;
+}
+.overlay-10::before {
+  opacity: .1;
+}
+
+[class*="overlay-"]::before {
+  content: '';
+  background-color: black;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+[class*="overlay-"] > * {
+  z-index: 1;
+}
