added cypress + core app

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -64,6 +64,10 @@
  * @import "utilities/skew-transforms";
  */
 
+*, *::before *::after {
+  box-sizing: border-box;
+}
+
 @keyframes fadeInDown {
   from {
     opacity: 0;
