--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,6 @@
 /*@import "vue2-animate/dist/vue2-animate.min.css";*/
 @import url('https://fonts.googleapis.com/css?family=Karla:400,700');
-
+@import "prismjs/themes/prism-tomorrow.css";
 /**
  * This injects Tailwind's base styles, which is a combination of
  * Normalize.css and some additional base styles.
@@ -151,4 +151,8 @@
 
 [class*="overlay-"] > * {
   z-index: 1;
+}
+
+code {
+  font-size: inherit;
 }
