--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,168 +1,1 @@
-/*@import "vue2-animate/dist/vue2-animate.min.css";*/
-@import url('https://fonts.googleapis.com/css?family=Karla:400,700');
-@import "prismjs/themes/prism-tomorrow.css";
-/**
- * This injects Tailwind's base styles, which is a combination of
- * Normalize.css and some additional base styles.
- *
- * You can see the styles here:
- * https://github.com/tailwindcss/tailwindcss/blob/master/css/preflight.css
- *
- * If using `postcss-import`, use this import instead:
- *
- * @import "tailwindcss/preflight";
- */
-@tailwind preflight;
-
-/**
- * This injects any component classes registered by plugins.
- *
- * If using `postcss-import`, use this import instead:
- *
- * @import "tailwindcss/components";
- */
-@tailwind components;
-
-/**
- * Here you would add any of your custom component classes; stuff that you'd
- * want loaded *before* the utilities so that the utilities could still
- * override them.
- *
- * Example:
- *
- * .btn { ... }
- * .form-input { ... }
- *
- * Or if using a preprocessor or `postcss-import`:
- *
- * @import "components/buttons";
- * @import "components/forms";
- */
-
-/**
- * This injects all of Tailwind's utility classes, generated based on your
- * config file.
- *
- * If using `postcss-import`, use this import instead:
- *
- * @import "tailwindcss/utilities";
- */
-@tailwind utilities;
-
-/**
- * Here you would add any custom utilities you need that don't come out of the
- * box with Tailwind.
- *
- * Example :
- *
- * .bg-pattern-graph-paper { ... }
- * .skew-45 { ... }
- *
- * Or if using a preprocessor or `postcss-import`:
- *
- * @import "utilities/background-patterns";
- * @import "utilities/skew-transforms";
- */
-
-*, *::before *::after {
-  box-sizing: border-box;
-}
-
-@keyframes fadeInDown {
-  from {
-    opacity: 0;
-    transform: translate3d(0, -3%, 0);
-  }
-  to {
-    opacity: 1;
-    transform: none;
-  }
-}
-
-@keyframes fadeOutDown {
-  from {
-    opacity: 1;
-  }
-  30% {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-    transform: translate3d(0, 3%, 0);
-  }
-}
-
-.fadeDown-enter-active, .fadeInDown,
-.fadeDown-leave-active, .fadeOutDown {
-  animation-duration: .1s;
-  animation-fill-mode: both;
-}
-
-.fadeDown-enter-active, .fadeInDown {
-  animation-name: fadeInDown;
-}
-
-.fadeDown-leave-active, .fadeOutDown {
-  animation-name: fadeOutDown;
-}
-
-.transition {
-  transition: .2s ease;
-}
-
-.overlay-90::before {
-  opacity: .9;
-}
-.overlay-80::before {
-  opacity: .8;
-}
-.overlay-70::before {
-  opacity: .7;
-}
-.overlay-60::before {
-  opacity: .6;
-}
-.overlay-50::before {
-  opacity: .5;
-}
-.overlay-40::before {
-  opacity: .4;
-}
-.overlay-30::before {
-  opacity: .3;
-}
-.overlay-20::before {
-  opacity: .2;
-}
-.overlay-10::before {
-  opacity: .1;
-}
-
-[class*="overlay-"]::before {
-  content: '';
-  background-color: black;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-}
-
-[class*="overlay-"] > * {
-  z-index: 1;
-}
-
-code {
-  font-size: inherit;
-}
-
-.dropdown-menu {
-  @apply absolute pin-r rounded bg-white shadow-md;
-
-  width: 180px;
-}
-
-.dropdown-item {
-  @apply block w-full text-left text-sm text-black leading-none no-underline py-3 px-2;
-}
+@import url('ant-design-vue/dist/antd.css');
