Fixed some local issues

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     window.app_name = '{% settings_value 'APP_NAME' %}';
     window.static = '{% static '' %}';
   </script>
-  {% render_bundle 'main' 'js' %}
+{#  {% render_bundle 'main' 'js' %}#}
   {% render_bundle 'vendor' 'js' %}
 {#  {% render_bundle 'login-popup' 'js' %}#}
   {% render_bundle 'app' 'js' %}
